# EDGE-AGENT

./: .env.example  .gitignore  AGENTS.md  IDENTITY.md  MEMORY.md  Makefile  README.md  TOOLS.md  USER.md  hummingbot_openclaw_project_blueprint.md  pyproject.toml
.openclaw/: workspace-state.json
configs/risk/: altcoins.yml  policy-live-conservative.yml  policy.yml
docs/decisions/: 0001-compose-not-fork.md  0002-risk-gateway.md  0003-generalist-day-trading.md
docs/runbooks/: disable-trading.md  go-live.md  integration-test.md  rollback.md  vps-setup.md
infra/: Dockerfile
infra/compose/: docker-compose.dev.yml  docker-compose.prod.yml  hummingbot_api_health.py
infra/env/: api.env.example  mcp.env.example
infra/scripts/: backup.sh  deploy.sh  down.sh  ensure-dev-env.sh  health-check.sh  integration-test-report.sh  integration-test-short.sh  integration-test.sh  logs.sh  rollback.sh  smoke.sh  up.sh
memory/: 2026-03-28.md
tasks/: phase-1.0-repo-skeleton.md  phase-1.1-infrastructure.md  phase-1.2-smoke-test.md  phase-1.3-binance-connection.md  phase-1.4-first-trade-pipeline.md  phase-2.0-market-analyst-agent.md  phase-2.1-trader-agent.md  phase-2.2-risk-policy-layer.md  phase-2.3-telegram-bot.md  phase-2.3b-openclaw-telegram.md  phase-2.4-testnet-integration.md  phase-2.5-generalize-to-day-trading.md  phase-3.0-go-live.md  phase-3.1-openclaw-workspace.md  phase-3.2-signal-iteration.md  phase-4.0-altcoin-expansion.md  phase-4.1-additional-agents.md  phase-4.2-vps-migration.md
tools/: signal_export.py  signal_journal_update.py  signal_metrics.py
(+71 files in other folders)
