[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-agent"
version = "0.1.0"
description = "Semi-autonomous crypto shorting system for Binance Futures perpetuals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "python-telegram-bot>=21.0,<22.0",
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agents*", "clients*", "policy*", "shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

